# swagger_server/service/student_service.py
@@ -3,7 +3,7 @@ import logging
 import os
 import tempfile
 
-from tinydb import TinyDB, Query
+from tinydb import TinyDB, Query, where
 from tinydb.middlewares import CachingMiddleware
 from functools import reduce
 import uuid
@@ -55,3 +55,13 @@ def delete_student(student_id):
         return 'Not found', 404
     student_db.remove(doc_ids=[int(student_id)])
     return student_id
+
+
+def get_student_by_last_name(last_name):
+    students = student_db.search(where('last_name') == last_name)
+    print(students)
+    if len(students) == 0:
+        return 404, "Not found"
+    student = Student.from_dict(students[0])
+    print(student)
+    return student
